--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -6,12 +6,58 @@
   <title>Cheyne's Personal Site</title>
 </head>
 
-<body>
-  <h1>Cheyne Quinter</h1>
-  <p><em>Professional coder <strong>man</strong> lol</em></p>
-  <p>I am an iOS and web developer. I love coffee and brew my own beer.</p>
+<style>
+
+body {
+  background-color: #EAF6F6;
+}
+
+hr {
+  background-color: blue;
+  border-style: none;
+  height: 2px;
+}
+
+</style>
+
+<body style>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="lennyface.png" alt "lennyface" style = "width:250px;height:250px;" /></td>
+      <td><h1>Cheyne Quinter</h1>
+      <p><em>Professional coder <a href = "https://t2.rbxcdn.com/78a3e0319663eae48748957f04242fa9">man</a> lol</em></p>
+      <p>Huge fan of whisky</p></td>
+    </tr>
+  </table>
   <hr>
-  <h3>Books and teaching</h3>
+  <h3>List stuff</h3>
+  <ul>
+    <li>This is a list</li>
+    <li>of stuff in a list</li>
+  </ul>
+  <h3>My Hobbies</h3>
+  <ol>
+    <Li>Beer brewing</Li>
+    <Li>Martial arts</Li>
+    <Li>Motorcycles</Li>
+  </ol>
+  <h3>Work Experience</h3>
+  <table>
+    <tr>
+      <th>Dates</th>
+      <th>Work</th>
+    </tr>
+    <tr>
+      <td>2010-2013</td>
+      <td>Lead Developer at Tempo App</td>
+    </tr>
+    <tr>
+      <td>2010</td>
+      <td>Lead Developer at Tempo App</td>
+    </tr>
+  </table>
+  <hr>
+  <a href="contact_me.html">Contact me</a>
 </body>
 
 </html>
